--- a/PingPhongTP1/PingPhongTP1.cbp
+++ b/PingPhongTP1/PingPhongTP1.cbp
@@ -3,18 +3,27 @@
 	<FileVersion major="1" minor="6" />
 	<Project>
 		<Option title="PingPhongTP1" />
+		<Option execution_dir="D:/Material CEFET/ComputacaoGrafica/TPS/TP1/TP1 - CG/PingPhongTP1" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
 				<Option output="bin/Debug/PingPhongTP1" prefix_auto="1" extension_auto="1" />
-				<Option working_dir="C:/Program Files (x86)/CodeBlocks/MinGW/bin" />
+				<Option working_dir="D:/Material CEFET/ComputacaoGrafica/TPS/TP1/TP1 - CG/PingPhongTP1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add library="freeglut" />
+					<Add library="SOIL" />
+					<Add library="glew32" />
+					<Add library="m" />
+					<Add library="glu32" />
+					<Add library="opengl32" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/PingPhongTP1" prefix_auto="1" extension_auto="1" />
@@ -42,7 +51,9 @@
 			<Add library="gdi32" />
 			<Add directory="C:/Program Files (x86)/CodeBlocks/MinGW/lib" />
 		</Linker>
+		<Unit filename="bib.cpp" />
 		<Unit filename="bib.h" />
+		<Unit filename="globalVariaveis.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
